@@ -1,3 +1,10 @@
+2004-01-27  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR target/10904
+	PR target/13058
+	* config/sparc/sparc.h (CANNOT_CHANGE_MODE_CLASS): New.
+	Forbid mode changes from SImode for lower FP regs if ARCH64.
+
 2004-02-14  Release Manager
 
 	* GCC 3.3.3 Released.
